# bevy_clicker

./: Cargo.toml  build_app.sh
assets/: 32x32.aseprite  backdrop.aseprite  balls.aseprite  finger.aseprite  finger.json  finger_pallet.aseprite  practice.aseprite  spark.psd  swords.aseprite  target.aseprite
src/: main.rs
